--- a/src/default.css
+++ b/src/default.css
@@ -46,7 +46,7 @@ a img {
 		display: inline-block;
 		padding: 5px;
 	}
-	
+
 		.image img
 		{
 			display: block;
@@ -60,13 +60,13 @@ a img {
 		width: 100%;
 		margin: 0 0 2em 0;
 	}
-	
+
 	.image-left
 	{
 		float: left;
 		margin: 0 2em 2em 0;
 	}
-	
+
 	.image-centered
 	{
 		display: block;
@@ -123,13 +123,13 @@ hr {
 		padding: 0;
 		list-style: none;
 	}
-	
+
 	ul.style2 li
 	{
 		border-top: solid 1px #E5E5E5;
 		padding: 0.80em 0;
 	}
-	
+
 	ul.style2 li:first-child
 	{
 		border-top: 0;
@@ -146,26 +146,26 @@ hr {
 		padding: 3em 0em 0em 0em;
 		list-style: none;
 	}
-	
+
 	ul.contact li
 	{
 		display: inline-block;
 		padding: 0em 0.30em;
 		font-size: 1.2em;
 	}
-	
+
 	ul.contact li span
 	{
 		display: none;
 		margin: 0;
 		padding: 0;
 	}
-	
+
 	ul.contact li a
 	{
 		color: #FFF;
 	}
-	
+
 	ul.contact li a:before
 	{
 		display: inline-block;
@@ -176,7 +176,7 @@ hr {
 		text-align: center;
 		color: #FFFFFF;
 	}
-	
+
 	ul.contact li a.icon-twitter:before { background: #2DAAE4; }
 	ul.contact li a.icon-facebook:before { background: #39599F; }
 	ul.contact li a.icon-dribbble:before { background: #C4376B;	}
@@ -201,7 +201,7 @@ hr {
 		font-size: 2em;
 		color: #171717;
 	}
-	
+
 	.title .byline
 	{
 		letter-spacing: 0.15em;
@@ -214,17 +214,17 @@ hr {
 /*********************************************************************************/
 /* Wrappers                                                                      */
 /*********************************************************************************/
-	
-	.container 
+
+	.container
 	{
-		width: 1200px;
+		width: 80%;
 		margin: 0px auto;
 	}
 
 	#wrapper {
 		background: #FFFFFF url(images/bg01.png) repeat;
 	}
-	
+
 	#footer-wrapper
 	{
 		overflow: hidden;
@@ -236,15 +236,15 @@ hr {
 /* Header                                                                        */
 /*********************************************************************************/
 
-	#header 
+	#header
 	{
 		position: relative;
 		overflow: hidden;
-		height: 8em;
+		height: 250px;
 		background: #4388C5;
 		box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
 	}
-	
+
 	#header:before
 	{
 		content: '';
@@ -280,7 +280,7 @@ hr {
 		background-image: url('images/bg01.png');
 		opacity: .7;
 	}
-	
+
 	#logo h1
 	{
 		display: inline-block;
@@ -291,7 +291,7 @@ hr {
 		font-size: 2.5em;
 		color: #FFFFFF;
 	}
-	
+
 	#logo a
 	{
 		text-decoration: none;
@@ -305,7 +305,7 @@ hr {
 	#menu
 	{
 	}
-	
+
 	#menu
 	{
 		position: absolute;
@@ -314,24 +314,24 @@ hr {
 		right: 2em;
 		text-align: center;
 	}
-	
+
 	#menu > ul > li > ul
 	{
 		display: none;
 	}
-	
+
 	#menu ul
 	{
 		display: inline-block;
 	}
-	
+
 	#menu li
 	{
 		display: block;
 		float: left;
 		text-align: center;
 	}
-	
+
 	#menu li a
 	{
 		display: block;
@@ -345,11 +345,11 @@ hr {
 		outline: 0;
 		color: #CCE7FF;
 	}
-	
+
 	#menu li:hover a, #menu li.active a, #menu li.active span
 	{
 	}
-	
+
 	#menu .current_page_item a
 	{
 		color: #FFFFFF;
@@ -360,10 +360,10 @@ hr {
 /* Banner                                                                        */
 /*********************************************************************************/
 
-	#banner 
+	#banner
 	{
 	}
-	
+
 /*********************************************************************************/
 /* Page                                                                          */
 /*********************************************************************************/
@@ -393,12 +393,12 @@ hr {
 		float: right;
 		width: 345px;
 	}
-	
+
 	#sidebar .title h2
 	{
 		font-size: 1.6em;
 	}
-	
+
 	#sidebar .box1,
 	#sidebar .box2
 	{
@@ -417,7 +417,7 @@ hr {
 		text-transform: uppercase;
 		color: #6F6F6F;
 	}
-	
+
 	#footer h2
 	{
 		letter-spacing: 0.20em;
@@ -425,7 +425,7 @@ hr {
 		font-size: 2.4em;
 		color: #FFF;
 	}
-	
+
 	#footer .byline
 	{
 		letter-spacing: 0.15em;
@@ -444,7 +444,7 @@ hr {
 		overflow: hidden;
 		padding: 5em 0em;
 	}
-	
+
 	#copyright p
 	{
 		letter-spacing: 0.20em;
@@ -453,7 +453,7 @@ hr {
 		font-size: 0.80em;
 		color: #6F6F6F;
 	}
-	
+
 	#copyright a
 	{
 		text-decoration: none;
@@ -471,7 +471,7 @@ hr {
 		padding-bottom: 3em;
 		border-bottom: 1px solid #E5E5E5;
 	}
-	
+
 /*********************************************************************************/
 /* Portfolio                                                                     */
 /*********************************************************************************/
@@ -480,12 +480,12 @@ hr {
 	{
 		text-align: center;
 	}
-	
+
 	#portfolio .title h2
 	{
 		color: #262626;
 	}
-	
+
 	#column1,
 	#column2,
 	#column3,
@@ -493,23 +493,20 @@ hr {
 	{
 		width: 282px;
 	}
-	
+
 	#column1,
 	#column2
 	{
 		float: left;
 		margin-right: 24px;
 	}
-	
+
 	#column3
 	{
 		float: left;
 	}
-	
+
 	#column4
 	{
 		float: right;
 	}
-
-
-	
