Update - Logo Menu done ish

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,23 +7,16 @@
 		margin: 0px;
 		padding: 0px;
 		background: #b9b9b9;
-		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 12pt;
-		font-weight: 300;
 		color: #000000;
+		font-family: sans-serif;
 	}
 
 /*********************************************************************************/
-/* Wrappers                                                                      */
+/* Main Wrappers                                                                 */
 /*********************************************************************************/
 
-	.container_body
+	#wrapper
 	{
-		width: 75%;
-		margin: 0px auto;
-	}
-
-	#wrapper {
 		background: #FFFFFF;
 	}
 
@@ -35,37 +28,103 @@
 	{
 		position: relative;
 		overflow: hidden;
-		height: 250px;
-		background: #ff2662;
-		box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+		height: 30%;
+		width: 100%;
+		background: #00f7ff;
 	}
 
 /*********************************************************************************/
-/* Logo                                                                          */
+/* Logo Bar                                                                      */
 /*********************************************************************************/
 
-	#logo
+	#logo_bar
 	{
-		height: 50px;
-		background: #b18ed4;
-	}
-
-/*********************************************************************************/
-/* Menu                                                                          */
-/*********************************************************************************/
-
-	#menu
-	{
-		position: absolute;
-		display: block;
-		top: 2.7em;
-		right: 2em;
+		height: 100px;
+		width: 100%;
 		text-align: center;
+		background: rgb(207, 207, 207);
 	}
 
-	#menu .current_page
+	#logo_img
 	{
-		color: #1c00ff;
+		width: 300px;
+		float: left;
+		padding: 10px;
+	}
+
+	#logo_title
+	{
+		width: 30%;
+		float: left;
+		padding: 10px;
+	}
+
+	#logo_menu
+	{
+		float: right;
+		padding: 10px;
+	}
+
+	#logo_menu .link
+	{
+		list-style-type: none;
+		font-size: 16pt;
+		padding: 0;
+		margin: 10;
+	}
+
+	#logo_menu .link a
+	{
+		text-decoration: none;
+	}
+
+
+	#logo_menu .button_default
+	{
+		background: #ffffff;
+		width: 160px;
+		float: left;
+		margin: 20px;
+		border-radius: 50px;
+		border-style: solid;
+		border-width: 2px;
+		border-color: #000000;
+	}
+
+	#logo_menu .button_default a
+	{
+		color: #000000;
+	}
+
+	#logo_menu .button_donate
+	{
+		background: #ff0000;
+		width: 160px;
+		float: left;
+		margin: 20px;
+		border-radius: 50px;
+		border-style: solid;
+		border-width: 2px;
+		border-color: #ffffff;
+	}
+
+	#logo_menu .button_donate a
+	{
+		color: #ffffff;
+	}
+
+/*********************************************************************************/
+/* Navbar                                                                        */
+/*********************************************************************************/
+
+	#navbar
+	{
+
+	}
+
+	#navbar .current_page a
+	{
+		color: #ffffff;
 	}
 
 /*********************************************************************************/
@@ -91,7 +150,8 @@
 	#page
 	{
 		overflow: hidden;
-		padding: 10% 10% 10% 10%;
+		width: 75%;
+		margin: 0px auto;
 	}
 
 /*********************************************************************************/
