--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@
 	{
 		position: relative;
 		overflow: hidden;
-		height: 30%;
+		height: 166px;
 		width: 100%;
 		background: #00f7ff;
 	}
@@ -39,7 +39,7 @@
 
 	#logo_bar
 	{
-		height: 100px;
+		height: 120px;
 		width: 100%;
 		text-align: center;
 		background: rgb(207, 207, 207);
@@ -117,9 +117,72 @@
 /* Navbar                                                                        */
 /*********************************************************************************/
 
-	#navbar
+	div.navbar
 	{
+		width: 100%;
+		height: 46px;
+		background-color: #280625;
+	}
 
+	ul.navbar
+	{
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 0;
+	    overflow: hidden;
+	}
+
+	li.navbar
+	{
+	    float: left;
+	}
+
+	li.navbar a, .dropbtn
+	{
+	    display: inline-block;
+	    color: white;
+	    text-align: center;
+	    padding: 14px 16px;
+	    text-decoration: none;
+	}
+
+	li a:hover, .dropdown:hover .dropbtn
+	{
+	    background-color: red;
+	}
+
+	li.dropdown
+	{
+	    display: inline-block;
+	}
+
+	.dropdown-content
+	{
+	    display: none;
+	    position: absolute;
+	    background-color: #f9f9f9;
+	    min-width: 160px;
+	    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	    z-index: 1;
+	}
+
+	.dropdown-content a
+	{
+	    color: black;
+	    padding: 12px 16px;
+	    text-decoration: none;
+	    display: block;
+	    text-align: left;
+	}
+
+	.dropdown-content a:hover
+	{
+	background-color: #ff3d5d
+	}
+
+	.dropdown:hover .dropdown-content
+	{
+	    display: block;
 	}
 
 	#navbar .current_page a
@@ -152,6 +215,7 @@
 		overflow: hidden;
 		width: 75%;
 		margin: 0px auto;
+		padding-top: 10px;
 	}
 
 /*********************************************************************************/
