--- a/src/styles.css
+++ b/src/styles.css
@@ -142,7 +142,7 @@
 	li.navbar a
 	{
 	    display: inline-block;
-	    color: ;
+	    color: white;
 	    text-align: center;
 	    padding: 14px 16px;
 	    text-decoration: none;
