--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@
 		height: 120px;
 		width: 100%;
 		text-align: center;
-		background: rgb(207, 207, 207);
+		background: #FFFFFF;
 	}
 
 	#logo_img
