--- a/src/styles.css
+++ b/src/styles.css
@@ -207,6 +207,16 @@
 		width: 345px;
 	}
 
+	#page-links
+	{
+
+	}
+
+	#social-links
+	{
+
+	}
+
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
