--- a/src/styles.css
+++ b/src/styles.css
@@ -199,60 +199,21 @@
 		width: 75%;
 	}
 
-	.slider-holder {
-	    width: 800px;
-	    height: 400px;
-	    background-color: yellow;
-	    margin-left: auto;
-	    margin-right: auto;
-	    margin-top: 0px;
-	    text-align: center;
-	    overflow: hidden;
+	#slideshow {
+  margin: 80px auto;
+  position: relative;
+  width: 240px;
+  height: 240px;
+  padding: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 	}
 
-	.image-holder	{
-	    width: 2400px;
-	    background-color: red;
-	    height: 400px;
-	    clear: both;
-	    position: relative;
-
-	    -webkit-transition: left 2s;
-	    -moz-transition: left 2s;
-	    -o-transition: left 2s;
-	    transition: left 2s;
-	}
-
-	.slider-image	{
-	    float: left;
-	    margin: 0px;
-	    padding: 0px;
-	    position: relative;
-	}
-
-	#slider-image-1:target ~ .image-holder {
-	    left: 0px;
-	}
-
-	#slider-image-2:target ~ .image-holder {
-	    left: -800px;
-	}
-
-	#slider-image-3:target ~ .image-holder {
-	    left: -1600px;
-	}
-
-	.button-holder {
-	    position: relative;
-	    top: -20px;
-	}
-
-	.slider-change {
-	    display: inline-block;
-	    height: 10px;
-	    width: 10px;
-	    border-radius: 5px;
-	    background-color: brown;
+	#slideshow > div {
+	  position: absolute;
+	  top: 10px;
+	  left: 10px;
+	  right: 10px;
+	  bottom: 10px;
 	}
 
 /*********************************************************************************/
