Better sponsor table grid

--- a/src/styles.css
+++ b/src/styles.css
@@ -175,8 +175,16 @@
 /*********************************************************************************/
 
 /*********************************************************************************/
-/* Banner                                                                        */
+/* Table Styles                                                                  */
 /*********************************************************************************/
+
+	.sponsor-grid td {
+		text-align: center;
+	}
+
+	.sponsor-grid {
+		padding-bottom: 20px;
+	}
 
 /*********************************************************************************/
 /* Page                                                                          */
