--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@
 		padding: 10px;
 	}
 
-	#logo_menu .link
+	#logo_menu .button_default ul
 	{
 		list-style-type: none;
 		font-size: 16pt;
@@ -74,7 +74,7 @@
 		margin: 10;
 	}
 
-	#logo_menu .link a
+	#logo_menu .button_default a
 	{
 		text-decoration: none;
 	}
@@ -90,23 +90,12 @@
 		border-style: solid;
 		border-width: 2px;
 		border-color: #000000;
-	}
-
-	#logo_menu .button_default a
-	{
 		color: #000000;
 	}
 
 	#logo_menu .button_donate
 	{
 		background: #ff0000;
-		width: 160px;
-		float: left;
-		margin: 20px;
-		border-radius: 50px;
-		border-style: solid;
-		border-width: 2px;
-		border-color: #ffffff;
 	}
 
 	#logo_menu .button_donate a
