--- a/src/styles.css
+++ b/src/styles.css
@@ -251,6 +251,10 @@
 		width: 75%;
 	}
 
+	#content img {
+	padding: 10 0px;
+	
+	}
 /*********************************************************************************/
 /* Sidebar                                                                       */
 /*********************************************************************************/
