--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,21 @@
 		color: #000000;
 		font-family: sans-serif;
 	}
+#introtext .vmiddle .wrap h1 {
+    margin: 0px auto;
+    font-size: 50px;
+    line-height: 1.3;
+    font-weight: 300;
+	color: 	#F8F8FF;
+}
+#introtext {
+    background-color: #666;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.3);
+}
+
 
 /*********************************************************************************/
 /* Main Wrappers                                                                 */
