--- a/src/styles.css
+++ b/src/styles.css
@@ -246,6 +246,11 @@
 		padding-bottom: 20px;
 	}
 
+	.support-grid td {
+		padding: 20;
+		text-align: center;
+	}
+
 /*********************************************************************************/
 /* Page                                                                          */
 /*********************************************************************************/
