--- a/src/styles.css
+++ b/src/styles.css
@@ -301,7 +301,7 @@
 	}
 
 	.thirds {
-		width: 80%;
+		width: 100%;
 		height: 200;
 		margin: auto;
 		padding: 0;
@@ -310,13 +310,16 @@
 	.thirds div {
 		float: left;
 		width: 30%;
-		padding: 0 5;
+		padding: 0 16;
 	}
 
 	.thirds h3 {
 		text-align: center;
 	}
-
+	
+	.thirds p {
+		padding: 0 15%;
+	
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
