--- a/src/styles.css
+++ b/src/styles.css
@@ -353,7 +353,7 @@
 	
 	.thirds p {
 		padding: 0 15%;
-	
+	}
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
