--- a/src/styles.css
+++ b/src/styles.css
@@ -285,12 +285,13 @@
 	.donator-grid table {
 		margin: auto;
 		padding-bottom: 20px;
+		border-spacing: 10px;
 	}
 
 	.donator-grid td {
 		text-align: center;
-		padding: 0 10 20 10;
-		margin: 0;
+		padding: 20 10 20 10;
+		margin: 30 0 0 0;
 		width: 250;
 	}
 
@@ -311,6 +312,7 @@
 	.donator-grid a {
 		text-decoration: none;
 	}
+	
 /*********************************************************************************/
 /* Page                                                                          */
 /*********************************************************************************/
