--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 		color: #000000;
 		font-family: sans-serif;
 	}
-	
+
 	#introtext .vmiddle .wrap h1 {
     margin: 0px auto;
     font-size: 50px;
@@ -28,12 +28,9 @@
 	    text-shadow: 1px 1px 1px rgba(0,0,0,.3);
 	}
 
-/*********************************************************************************/
-/* Main Wrappers                                                                 */
-/*********************************************************************************/
-
 	#wrapper {
 		background: #FFFFFF;
+		padding-bottom: 20px;
 	}
 
 /*********************************************************************************/
@@ -283,9 +280,9 @@
 
 	#page	{
 		overflow: hidden;
-		width: 60%;
+		width: 80%;
 		margin: 0px auto;
-		padding: 10px 0px;
+		padding: 0px;
 	}
 
 /*********************************************************************************/
@@ -293,7 +290,16 @@
 /*********************************************************************************/
 
 	#content {
-		margin: auto;
+		overflow: hidden;
+		margin: 15px auto;
+		padding: 20 50;
+		width: 70%;
+		box-shadow: 0px 5px 30px #6F6F6F;
+		background-color: rgba(254, 10, 10, 0.05);
+		border-color: rgba(254, 10, 10, 0.8);
+		border-style: solid none;
+		border-radius: 10px;
+		border-width: 10px;
 	}
 
 	.article img {
@@ -315,6 +321,13 @@
 
 	.thirds h3 {
 		text-align: center;
+	}
+
+	.donate-iframe {
+		padding: 10px;
+		height: 2100;
+		width: 100%;
+		border: none;
 	}
 
 /*********************************************************************************/
