--- a/src/styles.css
+++ b/src/styles.css
@@ -27,12 +27,6 @@
 	    background-repeat: no-repeat;
 	    text-shadow: 1px 1px 1px rgba(0,0,0,.3);
 	}
-<<<<<<< HEAD
-/*********************************************************************************/
-/* Main Wrappers                                                                 */
-/*********************************************************************************/
-=======
->>>>>>> 9f95fa7ecf232c06a752b4bd65024314cec35f0b
 
 	#wrapper {
 		background: #FFFFFF;
@@ -398,3 +392,4 @@
 		font-size: 0.80em;
 		color: #6F6F6F;
 	}
+1
