Cleaned up services page using show and hide buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -350,6 +350,10 @@
 		border: none;
 	}
 
+	#article1, #article2, #article3, #article4 {
+		display: none;
+		
+	}
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
