--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@
 	}
 
 	#wrapper {
-		background: #FFFFFF;
+		background-image: url(images/bg01.jpg);
 		padding-bottom: 20px;
 	}
 
@@ -292,7 +292,7 @@
 		text-decoration: none;
 	}
 
-		.sponsor-grid1 td {
+	.sponsor-grid1 td {
 		text-align: center;
 		border-style: groove;
 		border-width: medium;
@@ -390,7 +390,7 @@
 		padding: 20 50;
 		width: 70%;
 		box-shadow: 0px 5px 30px #6F6F6F;
-		background-color: rgba(254, 10, 10, 0.05);
+		background-color: rgb(254, 235, 235);
 		border-color: rgba(254, 10, 10, 0.8);
 		border-style: solid none;
 		border-radius: 10px;
